--- a/flask-app.service
+++ b/flask-app.service
@@ -3,8 +3,8 @@ Description=Flask app service
 After=network.target
 
 [Service]
-WorkingDirectory=C:\Users\s_kri\PycharmProjects\HW_25_host
-ExcStart=C:\Users\s_kri\PycharmProjects\HW_25_host\venv\bin\python run.py
+WorkingDirectory=/home/s_aliabeva/HW_25_host
+ExcStart=/home/s_aliabeva/HW_25_host/venv/bin/python run.py
 
 [Install]
 WantedBy==multi-user.target
